--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,9 @@
     ],
     "repositories": [
     ],
+    "autoload": {
+        "classmap": ["components/"]
+    },
     "require": {
         "php": ">=5.4.0",
         "yiisoft/yii": ">=1.1.0"
