--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "repositories": [
     ],
     "autoload": {
-        "classmap": ["components/"]
+        "classmap": ["components/", "widgets/"]
     },
     "require": {
         "php": ">=5.4.0",
